--- a/src/main/webapp/member/address.xhtml
+++ b/src/main/webapp/member/address.xhtml
@@ -45,26 +45,16 @@
                     <p:inputText id="firstname" value="#{addressView.selectedRecord.firstname}" label="#{i18n['Firstname']}" placeholder="#{i18n['Firstname']}" required="true"/>
                     <p:outputLabel for="lastname" value="#{i18n['Lastname']}"/>
                     <p:inputText id="lastname" value="#{addressView.selectedRecord.lastname}" label="#{i18n['Lastname']}" placeholder="#{i18n['Lastname']}" required="true"/>
-                    <p:outputLabel for="company" value="#{i18n['Company']}"/>
-                    <p:inputText id="company" value="#{addressView.selectedRecord.company}" label="#{i18n['Company']}" placeholder="#{i18n['Company']}" />
-                    <p:outputLabel for="email" value="#{i18n['E-mail Address']}"/>
-                    <p:inputText id="email" value="#{addressView.selectedRecord.email}" label="#{i18n['E-mail Address']}" placeholder="#{i18n['E-mail Address']}" required="true"/>
                     <p:outputLabel for="phone" value="#{i18n['Phone Number']}"/>
                     <p:inputText id="phone" value="#{addressView.selectedRecord.phone}" label="#{i18n['Phone Number']}" placeholder="#{i18n['Phone Number']}" required="true"/>
-                    <p:outputLabel for="fax" value="#{i18n['Fax Number']}"/>
-                    <p:inputText id="fax" value="#{addressView.selectedRecord.fax}" label="#{i18n['Fax Number']}" placeholder="#{i18n['Fax Number']}"/>
-                    <p:outputLabel for="addressLine1" value="#{i18n['Address']}"/>
-                    <p:inputText id="addressLine1" value="#{addressView.selectedRecord.line1}" label="#{i18n['Address']}" placeholder="#{i18n['Address']}" required="true"/>
-                    <p:outputLabel for="addressLine2" value="#{i18n['Address']}"/>
-                    <p:inputText id="addressLine2" value="#{addressView.selectedRecord.line2}" label="#{i18n['Address']}" placeholder="#{i18n['Address']}" required="true"/>
+                    <p:outputLabel for="line" value="#{i18n['Line']}"/>
+                    <p:inputText id="line" value="#{addressView.selectedRecord.line}" label="#{i18n['Line']}" placeholder="#{i18n['Line']}" required="true"/>
                     <p:outputLabel for="zipcode" value="#{i18n['Zip Code']}"/>
                     <p:inputText id="zipcode" value="#{addressView.selectedRecord.zipcode}" label="#{i18n['Zip Code']}" placeholder="#{i18n['Zip Code']}" required="true"/>
                     <p:outputLabel for="county" value="#{i18n['County']}"/>
                     <p:inputText id="county" value="#{addressView.selectedRecord.county}" label="#{i18n['County']}" placeholder="#{i18n['County']}" required="true"/>
                     <p:outputLabel for="city" value="#{i18n['City']}"/>
                     <p:inputText id="city" value="#{addressView.selectedRecord.city}" label="#{i18n['City']}" placeholder="#{i18n['City']}" required="true"/>
-                    <p:outputLabel for="region" value="#{i18n['Region']}"/>
-                    <p:inputText id="region" value="#{addressView.selectedRecord.region}" label="#{i18n['Region']}" placeholder="#{i18n['Region']}" required="true"/>
                     <p:outputLabel for="country" value="#{i18n['Country']}"/>
                     <p:inputText id="country" value="#{addressView.selectedRecord.country}" label="#{i18n['Country']}" placeholder="#{i18n['Country']}" required="true"/>
                 </p:panelGrid>
@@ -84,26 +74,16 @@
                     <p:inputText id="firstname" value="#{addressView.newRecord.firstname}" label="#{i18n['Firstname']}" placeholder="#{i18n['Firstname']}" required="true"/>
                     <p:outputLabel for="lastname" value="#{i18n['Lastname']}"/>
                     <p:inputText id="lastname" value="#{addressView.newRecord.lastname}" label="#{i18n['Lastname']}" placeholder="#{i18n['Lastname']}" required="true"/>
-                    <p:outputLabel for="company" value="#{i18n['Company']}"/>
-                    <p:inputText id="company" value="#{addressView.newRecord.company}" label="#{i18n['Company']}" placeholder="#{i18n['Company']}"/>
-                    <p:outputLabel for="email" value="#{i18n['E-mail Address']}"/>
-                    <p:inputText id="email" value="#{addressView.newRecord.email}" label="#{i18n['E-mail Address']}" placeholder="#{i18n['E-mail Address']}" required="true"/>
                     <p:outputLabel for="phone" value="#{i18n['Phone Number']}"/>
                     <p:inputText id="phone" value="#{addressView.newRecord.phone}" label="#{i18n['Phone Number']}" placeholder="#{i18n['Phone Number']}" required="true"/>
-                    <p:outputLabel for="fax" value="#{i18n['Fax Number']}"/>
-                    <p:inputText id="fax" value="#{addressView.newRecord.fax}" label="#{i18n['Fax Number']}" placeholder="#{i18n['Fax Number']}"/>
-                    <p:outputLabel for="addressLine1" value="#{i18n['Address']}"/>
-                    <p:inputText id="addressLine1" value="#{addressView.newRecord.line1}" label="#{i18n['Address']}" placeholder="#{i18n['Address']}" required="true"/>
-                    <p:outputLabel for="addressLine2" value="#{i18n['Address']}"/>
-                    <p:inputText id="addressLine2" value="#{addressView.newRecord.line2}" label="#{i18n['Address']}" placeholder="#{i18n['Address']}" required="true"/>
+                    <p:outputLabel for="line" value="#{i18n['Line']}"/>
+                    <p:inputText id="line" value="#{addressView.newRecord.line}" label="#{i18n['Line']}" placeholder="#{i18n['Line']}" required="true"/>
                     <p:outputLabel for="zipcode" value="#{i18n['Zip Code']}"/>
                     <p:inputText id="zipcode" value="#{addressView.newRecord.zipcode}" label="#{i18n['Zip Code']}" placeholder="#{i18n['Zip Code']}" required="true"/>
                     <p:outputLabel for="county" value="#{i18n['County']}"/>
                     <p:inputText id="county" value="#{addressView.newRecord.county}" label="#{i18n['County']}" placeholder="#{i18n['County']}" required="true"/>
                     <p:outputLabel for="city" value="#{i18n['City']}"/>
                     <p:inputText id="city" value="#{addressView.newRecord.city}" label="#{i18n['City']}" placeholder="#{i18n['City']}" required="true"/>
-                    <p:outputLabel for="region" value="#{i18n['Region']}"/>
-                    <p:inputText id="region" value="#{addressView.newRecord.region}" label="#{i18n['Region']}" placeholder="#{i18n['Region']}" required="true"/>
                     <p:outputLabel for="country" value="#{i18n['Country']}"/>
                     <p:inputText id="country" value="#{addressView.newRecord.country}" label="#{i18n['Country']}" placeholder="#{i18n['Country']}" required="true"/>
                 </p:panelGrid>
