--- a/src/main/webapp/contracts/omega-layout/sidebar.xhtml
+++ b/src/main/webapp/contracts/omega-layout/sidebar.xhtml
@@ -44,6 +44,7 @@
                             <p:menuitem outcome="/administrator/index" value="#{i18n['Dashboard']}" icon="fa fa-tachometer fa-fw"/>
                             <p:submenu label="#{i18n['User Management']}" icon="fa fa-users fa-fw">
                                 <p:menuitem outcome="/administrator/user/index" value="#{i18n['Users']}" />
+                                <p:menuitem outcome="/administrator/user/feedback" value="#{i18n['Feedbacks']}" />
                             </p:submenu>
                             <p:submenu label="#{i18n['Product Management']}" icon="fa fa-cubes fa-fw">
                                 <p:menuitem outcome="/administrator/product/index" value="#{i18n['Products']}" />
@@ -56,8 +57,6 @@
                             </p:submenu>
                             <p:submenu label="#{i18n['Content Management']}" icon="fa fa-sitemap fa-fw">
                                 <p:menuitem outcome="/administrator/page/index" value="#{i18n['Pages']}" />
-                                <p:menuitem outcome="/administrator/feedback" value="#{i18n['Feedbacks']}" />
-                                <p:menuitem outcome="/administrator/banner" value="#{i18n['Banners']}" />
                             </p:submenu>
                         </po:menu>
                     </h:form>
