--- a/src/main/webapp/resources/composite/navigationProduct.xhtml
+++ b/src/main/webapp/resources/composite/navigationProduct.xhtml
@@ -23,6 +23,9 @@
                 <p:menuitem outcome="/administrator/product/image" value="#{i18n['Images']}">
                     <f:param name="id" value="#{cc.attrs.product.id}" />
                 </p:menuitem>
+                <p:menuitem outcome="/administrator/product/banner" value="#{i18n['Banner']}">
+                    <f:param name="id" value="#{cc.attrs.product.id}" />
+                </p:menuitem>
             </p:menu>
         </h:form>
     </composite:implementation>
