--- a/src/main/webapp/administrator/product/index.xhtml
+++ b/src/main/webapp/administrator/product/index.xhtml
@@ -49,13 +49,8 @@
         <h:form id="newForm">
             <p:dialog id="newDlg" header="#{i18n['Create a new record']}" widgetVar="newDialog" resizable="false" closeOnEscape="true" modal="true">
                 <p:panelGrid columns="2">
-                    <p:outputLabel for="productStatus" value="#{i18n['Product Status']}"/>
-                    <p:selectOneMenu id="productStatus" value="#{productController.newRecord.productStatus}" 
-                                     converter="#{productStatusConverter}" 
-                                     label="#{i18n['Product Status']}" 
-                                     required="true">
-                        <f:selectItems value="#{productController.productStatuses}" var="productStatus" itemValue="#{productStatus}" itemLabel="#{i18n[productStatus]}"/>
-                    </p:selectOneMenu>
+                    <p:outputLabel for="status" value="#{i18n['Status']}"/>
+                    <p:selectBooleanButton id="status" value="#{productController.newRecord.status}" onLabel="#{i18n['Active']}" offLabel="#{i18n['Passive']}" />
 
                     <p:outputLabel for="code" value="#{i18n['Product Code']}"/>
                     <p:inputText id="code" value="#{productController.newRecord.code}" label="#{i18n['Product Code']}" placeholder="#{i18n['Product Code']}" validator="codeValidator" required="true"/>
