--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,10 +15,8 @@
                 <p:button outcome="/login" value="#{i18n['Log In']}"/>
             </div>
         </div>
-        <div id="pricing">
-            <div class="pricing-content">
-                <span class="pricing-title">Products</span>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+        <div id="indexpage">
+            <div class="indexpage-content">
                 <div class="ui-g">
                     <ui:repeat value="#{indexBean.banners}" var="product">
                         <div class="ui-g-12 ui-md-12">
