--- a/src/main/webapp/contracts/omega-layout/sidebar.xhtml
+++ b/src/main/webapp/contracts/omega-layout/sidebar.xhtml
@@ -25,10 +25,16 @@
                         <ul>
                             <li>
                                 <p:link outcome="/administrator/profile" rendered="#{request.isUserInRole('Administrator')}">
-                                    <i class="fa fa-fw fa-sliders"></i><span>#{i18n['Account']}</span>
+                                    <i class="fa fa-fw fa-user"></i><span>#{i18n['Account']}</span>
                                 </p:link>
                             </li>
-                            <li><a href="#"><i class="fa fa-fw fa-bell"></i><span>#{i18n['Notifications']}</span><span class="menu-badge">2</span></a></li>
+                            <li>
+                                <p:link outcome="/administrator/feedback" rendered="#{request.isUserInRole('Administrator')}">
+                                    <i class="fa fa-fw fa-bell"></i>
+                                    <span>#{i18n['Notifications']}</span>
+                                    <span class="menu-badge">5</span>
+                                </p:link>
+                            </li>
                             <li>
                                 <p:commandLink title="#{i18n['Sign Out']}" action="#{loginBean.doLogout}">
                                     <i class="fa fa-fw fa-power-off"></i><span>#{i18n['Sign Out']}</span>
@@ -41,23 +47,13 @@
                 <div class="menu">
                     <h:form>
                         <po:menu rendered="#{request.isUserInRole('Administrator')}">
-                            <p:menuitem outcome="/administrator/index" value="#{i18n['Dashboard']}" icon="fa fa-tachometer fa-fw"/>
-                            <p:submenu label="#{i18n['User Management']}" icon="fa fa-users fa-fw">
-                                <p:menuitem outcome="/administrator/user/index" value="#{i18n['Users']}" />
-                                <p:menuitem outcome="/administrator/user/feedback" value="#{i18n['Feedbacks']}" />
-                            </p:submenu>
-                            <p:submenu label="#{i18n['Product Management']}" icon="fa fa-cubes fa-fw">
-                                <p:menuitem outcome="/administrator/product/index" value="#{i18n['Products']}" />
-                                <p:menuitem outcome="/administrator/category/index" value="#{i18n['Categories']}" />
-                            </p:submenu>
-                            <p:submenu label="#{i18n['Order Management']}" icon="fa fa-shopping-cart fa-fw">
-                                <p:menuitem outcome="/administrator/saleline/index" value="#{i18n['Orders Saleline']}" />
-                                <p:menuitem outcome="/administrator/sale/index" value="#{i18n['Orders']}" />
-                                <p:menuitem outcome="/administrator/sale/report" value="#{i18n['Reports']}" />
-                            </p:submenu>
-                            <p:submenu label="#{i18n['Content Management']}" icon="fa fa-sitemap fa-fw">
-                                <p:menuitem outcome="/administrator/page/index" value="#{i18n['Pages']}" />
-                            </p:submenu>
+                            <p:menuitem outcome="/administrator/index" value="#{i18n['Dashboard']}" icon="fa fa-tachometer fa-fw" />
+                            <p:menuitem outcome="/administrator/page/index" value="#{i18n['Pages']}" icon="fa fa-files-o fa-fw" />
+                            <p:menuitem outcome="/administrator/user/index" value="#{i18n['Users']}" icon="fa fa-users fa-fw" />
+                            <p:menuitem outcome="/administrator/category/index" value="#{i18n['Categories']}" icon="fa fa-tags fa-fw" />
+                            <p:menuitem outcome="/administrator/product/index" value="#{i18n['Products']}" icon="fa fa-cubes fa-fw" />
+                            <p:menuitem outcome="/administrator/sale/index" value="#{i18n['Orders']}" icon="fa fa-shopping-cart fa-fw" />
+                            <p:menuitem outcome="/administrator/sale/report" value="#{i18n['Reports']}" icon="fa fa-line-chart fa-fw" />
                         </po:menu>
                     </h:form>
                 </div>
