--- a/src/main/webapp/contracts/omega-layout/topbar.xhtml
+++ b/src/main/webapp/contracts/omega-layout/topbar.xhtml
@@ -22,11 +22,11 @@
                     <input type="text" placeholder="#{i18n['Search']}" />
                     <span class="topbar-search-icon fa fa-search"></span>
                 </span>
-                <a rhref="#">
+                <p:link outcome="/administrator/feedback">
                     <span class="topbar-item-text">#{i18n['Messages']}</span>
                     <span class="topbar-icon fa fa-envelope-o animated swing"></span>
                     <span class="topbar-badge animated rubberBand">5</span>
-                </a>
+                </p:link>
                 <a href="#">
                     <span class="topbar-item-text">#{i18n['Settings']}</span>
                     <span class="topbar-icon fa fa-gear"></span>
