--- a/src/main/webapp/member/feedback.xhtml
+++ b/src/main/webapp/member/feedback.xhtml
@@ -15,16 +15,10 @@
                     <div class="ui-g-12">
                         <h:form>
                             <h:panelGrid columns="2">
-                                <p:outputLabel for="name" value="#{i18n['Your Full Name']}"/>
-                                <p:inputText id="name" value="#{feedbackBean.newRecord.name}" autocomplete="off" label="#{i18n['Your Full Name']}" placeholder="#{i18n['Your Full Name']}" required="true"/>
-                                <p:outputLabel for="email" value="#{i18n['Your E-mail Address']}"/>
-                                <p:inputText id="email" value="#{feedbackBean.newRecord.email}" autocomplete="off" label="#{i18n['Your E-mail Address']}" placeholder="#{i18n['Your E-mail Address']}" required="true"/>
-                                <p:outputLabel for="phone" value="#{i18n['Your Phone Number']}"/>
-                                <p:inputText id="phone" value="#{feedbackBean.newRecord.phone}" autocomplete="off" label="#{i18n['Your Phone Number']}" placeholder="#{i18n['Your Phone Number']}" required="true"/>
-                                <p:outputLabel for="message" value="#{i18n['Your Message']}"/>
-                                <p:inputTextarea id="message" value="#{feedbackBean.newRecord.message}" label="#{i18n['Your Message']}" placeholder="#{i18n['Your Message']}" cols="50" required="true"/>
-                                <p:outputLabel for="captcha" value="#{i18n['Captcha']}"/>
-                                <p:captcha id="captcha" label="#{i18n['Captcha']}" language="#{localeBean.locale}"/>
+                                <p:outputLabel for="subject" value="#{i18n['Subject']}"/>
+                                <p:inputText id="subject" value="#{feedbackBean.newRecord.subject}" autocomplete="off" label="#{i18n['Subject']}" placeholder="#{i18n['Subject']}" required="true"/>
+                                <p:outputLabel for="message" value="#{i18n['Message']}"/>
+                                <p:inputTextarea id="message" value="#{feedbackBean.newRecord.message}" label="#{i18n['Message']}" placeholder="#{i18n['Message']}" cols="50" required="true"/>
                             </h:panelGrid>
                             <p:commandButton value="#{i18n['Submit']}" actionListener="#{feedbackBean.doSubmit}" update="@form, :growl" />
                         </h:form>
