--- a/src/main/webapp/categories.xhtml
+++ b/src/main/webapp/categories.xhtml
@@ -5,9 +5,9 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/template_landing.xhtml">
     <ui:define name="content">
-        <div id="features">
-            <div class="features-content">
-                <h1 class="feature-title">#{i18n['Categories']}</h1>
+        <div id="indexpage">
+            <div class="indexpage-content">
+                <h1>#{i18n['Categories']}</h1>
 
                 <div class="ui-g">
                     <div class="ui-g-3">
