--- a/src/main/webapp/contracts/omega-layout/template_landing.xhtml
+++ b/src/main/webapp/contracts/omega-layout/template_landing.xhtml
@@ -109,7 +109,7 @@
                                     <ul style="font-size: smaller;">
                                         <li><p:link outcome="/login" value="#{i18n['Log In']}"/></li>
                                         <li><p:link outcome="/signup" value="#{i18n['Sign Up']}"/></li>
-                                        <li><p:link outcome="/member/feedback" value="#{i18n['Contact Us']}"/></li>
+                                        <li><p:link outcome="/member/feedback/index" value="#{i18n['Contact Us']}"/></li>
                                         <li><p:link outcome="/member/sale/track" value="#{i18n['Order Tracking']}"/></li>
                                     </ul>
                                 </div>
