--- a/src/main/webapp/page.xhtml
+++ b/src/main/webapp/page.xhtml
@@ -11,9 +11,9 @@
             <f:event type="preRenderView" listener="#{pageBean.onLoad}"/>
         </f:metadata>
 
-        <div id="features">
-            <div class="features-content">
-                <h1 class="feature-title"><h:outputText value="#{pageBean.selectedRecord.name}"/></h1>
+        <div id="indexpage">
+            <div class="indexpage-content">
+                <h1><h:outputText value="#{pageBean.selectedRecord.name}"/></h1>
                 <p><h:outputText value="#{pageBean.selectedRecord.description}"/></p>
 
                 <div class="ui-g">
