--- a/src/main/webapp/member/sale/index.xhtml
+++ b/src/main/webapp/member/sale/index.xhtml
@@ -8,9 +8,9 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/template_landing.xhtml">
     <ui:define name="content">
-        <div id="features">
-            <div class="features-content">
-                <h1 class="feature-title">#{i18n['My Orders']}</h1>
+        <div id="indexpage">
+            <div class="indexpage-content">
+                <h1>#{i18n['My Orders']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                 <div class="ui-g">
