--- a/src/main/webapp/member/sale/track.xhtml
+++ b/src/main/webapp/member/sale/track.xhtml
@@ -6,9 +6,9 @@
                 template="/template_landing.xhtml">
     <ui:define name="title">#{i18n['Order Tracking']}</ui:define>
     <ui:define name="content">
-        <div id="features">
-            <div class="features-content">
-                <h1 class="feature-title">#{i18n['Order Tracking']}</h1>
+        <div id="indexpage">
+            <div class="indexpage-content">
+                <h1>#{i18n['Order Tracking']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                 <div class="ui-g">
