--- a/src/main/webapp/member/shopping/shopping.xhtml
+++ b/src/main/webapp/member/shopping/shopping.xhtml
@@ -12,9 +12,9 @@
             <f:event type="preRenderView" listener="#{shoppingBean.onLoad}" />
         </f:metadata>
 
-        <div id="features">
-            <div class="features-content">
-                <h1 class="feature-title">#{i18n['My Shopping Basket']}</h1>
+        <div id="indexpage">
+            <div class="indexpage-content">
+                <h1>#{i18n['My Shopping Basket']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
                 <div class="ui-g">
