--- a/src/main/webapp/product.xhtml
+++ b/src/main/webapp/product.xhtml
@@ -14,8 +14,8 @@
             <f:event type="preRenderView" listener="#{productBean.onLoad}"/>
         </f:metadata>
 
-        <div id="features">
-            <div class="features-content">
+        <div id="indexpage">
+            <div class="indexpage-content">
 
                 <div class="ui-g">
                     <div class="ui-g-8">
